# grounded-pdf-rag-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.github/workflows/: ci.yml
src/: __init__.py  chat.py  config.py  db.py  embeddings.py  exceptions.py  health.py  ingest.py  llm.py  prompts.py  search.py  utils.py
tests/: __init__.py  test_config.py  test_exceptions.py  test_prompts.py  test_utils.py
